al borde de un colapso

--- a/app/src/main/res/layout/activity_olvide.xml
+++ b/app/src/main/res/layout/activity_olvide.xml
@@ -1,9 +1,87 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Olvide">
+    tools:context=".Olvide"
+    android:orientation="vertical"
+    android:gravity="center"
+    android:background="@drawable/fondon">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
+        
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/cusedittext"
+            android:orientation="vertical"
+            android:padding="24dp">
+            
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Recuperar contraseña"
+                android:textAlignment="center"
+                android:textColor="@color/blue"
+                android:textSize="30sp"
+                android:textStyle="bold" />
+            
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:id="@+id/usuarioRec"
+                android:background="@drawable/cusedittext"
+                android:layout_marginTop="40dp"
+                android:padding="8dp"
+                android:hint="Usuario"
+                android:drawableLeft="@drawable/baseline_person_24"
+                android:textColor="@color/black"
+                android:drawablePadding="12dp"/>
+
+            <EditText
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:id="@+id/emailRec"
+                android:background="@drawable/cusedittext"
+                android:layout_marginTop="20dp"
+                android:inputType="textEmailAddress"
+                android:padding="8dp"
+                android:hint="Correo"
+                android:drawableLeft="@drawable/baseline_alternate_email_24"
+                android:textColor="@color/black"
+                android:drawablePadding="12dp"/>
+
+            <Button
+                android:id="@+id/enviarRec"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="25dp"
+                android:backgroundTint="@color/blue"
+                android:text="Enviar correo"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                app:cornerRadius="20dp" />
+
+            <Button
+                android:id="@+id/iniciarRec"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginTop="10dp"
+                android:backgroundTint="#115174"
+                android:text="Iniciar sesión"
+                android:textAllCaps="false"
+                android:textSize="20sp"
+                app:cornerRadius="20dp" />
+
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>    
+
+</LinearLayout>
