--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -37,7 +37,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/usuario"
+                android:id="@+id/userLog"
                 android:background="@drawable/cusedittext"
                 android:layout_marginTop="40dp"
                 android:padding="8dp"
@@ -49,7 +49,7 @@
             <EditText
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:id="@+id/password"
+                android:id="@+id/passwordLog"
                 android:background="@drawable/cusedittext"
                 android:layout_marginTop="20dp"
                 android:inputType="textPassword"
