--- a/app/src/main/res/menu/listview.xml
+++ b/app/src/main/res/menu/listview.xml
@@ -2,6 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="API" />
-    <item android:title="Cerrar sesión " />
+    <item
+        android:id="@+id/item1"
+        android:title="API" />
+    <item
+        android:id="@+id/item2"
+        android:title="Cerrar sesión " />
 </menu>
